Clean up directory

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Synonym</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:200,300,400|Roboto+Slab:300,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body class="syn-ext">
@@ -22,7 +22,7 @@
       powered by <a href="#" aria-label="synonym.com" class="syn-ext-site-link">synonym.com</a>
     </div>
   </div>
-  <script src="popup.js"></script>
+  <script src="js/popup.js"></script>
 </body>
 
 </html>
