--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
   <h1 class="syn-ext-logo syn-ext-site-link">synonym.com</h1>
   <div class="syn-ext-wrapper">
     <p class="syn-ext-instructions"> Highlight a word on the webpage or input your own word below, then click "Get Synonyms". </p>
-    <input class="syn-ext-search" type="text" placeholder="find synonyms..." />
+    <input autofocus class="syn-ext-search" type="text" placeholder="find synonyms..." />
     <div class="syn-ext-results-wrapper">
       <ol class="syn-ext-results-list"></ol>
     </div>
